some code added

--- a/vertical_navbar.html
+++ b/vertical_navbar.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="css/vertical.css">
 </head>
 <body>
+
+    <menu class="navbar">
+        <h2>Navbar Design</h2>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">contact</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </nav>
+
+    </menu>
     
 </body>
 </html>
